src/styles/app.scss
/* ... */
.hero {
    background-size: cover;
    padding: 105px 0;
    height: 935px;
    max-width: 100%;
    // overflow-y: hidden;
    // overflow-x: hidden;
    position: relative;
    @media (max-width: 768px) {
        height: 975px;
    }
    @media (max-width: 501px) {
        height: 870px;
        padding: 77px 0;
    }
    &.staking {
        height: 1360px;
        background-position: center center;
        .van {
            margin-top: -70px;
        }
        h1 {
            color: #fff;
            text-transform: uppercase;
            font-size: 61px;
            line-height: 30px;
            margin-top: -20px;
            margin-bottom: 5px;
            position: relative;
            text-align: center;
            z-index: 9;
            font-weight: 300;
            text-shadow: 0px 0px 26px #160150;
            font-family: 'Monoton', cursive;
            text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff,
            0 0 40px #f038f0, 0 0 70px #f038f0, 0 0 80px #f038f0,
            0 0 120px #f038f0, 0 0 200px #f038f0;
        }
        @media (max-width: 990px) {
            padding: 105px 0;
            height: 1305px;
        }
        @media (max-width: 510px) {
            padding: 105px 0;
            height: 1350px;
            h1 {
                font-size: 43px;
            }
            .van {
                margin-top: -35px;
            }
        }
    }
}

.main-nav {
    .nav-item {
        margin: 0 7px;
        .nav-link {
            background: #10003b;
            border: 1px solid #3a2d73;
            box-sizing: border-box;
            border-radius: 7px;
            color: #fff;
            padding: 0.375rem 0.75rem;
            transition: all 150ms linear;
            font-style: normal;      
            font-weight: 700;
            font-size: 18px;
            svg {
                color: #a69fbb;
            }
            &.active,&:hover {
                color: #fff;
                background: linear-gradient(
                    328.75deg,
                    #f042f0 -5.49%,
                    #8a249d 19.13%,
                    #0f0038 104.44%
                );
                border: 1px solid #88239b;
                svg {
                    color: #fff;
                }
            }
        }
    }
}

.shortcut {
    margin: 0;
    font-weight: 500;
    font-size: 14px;
    text-decoration-line: underline;
    color: #20ff93;
    min-height: 21px;
    &:hover {
        cursor: pointer;
    }
}

.text-muted {
    color: #fff !important;
    opacity: 0.5;
}

.claim-unstake {
    padding: 15px;
    background: #2d1f60;
    border-radius: 4px;
    float: left;
    width: 100%;
}

.input-heading {
    margin-bottom: 0;
    font-size: 21px;
    font-weight: 600;
}
.input-slogan {
    margin-bottom: 0;
    font-size: 12px;
    opacity: 0.5;
    margin-bottom: 10px;
}

.input-group {
    .input-group-text {
        background-color: #241554;
        border: 1px solid #44377e;
    }
}

.pie-stats {
    padding: 6px 10px;
    background: #10003b8a;
    color: #ffffff9e;
    border: 1px solid #37296d;
    font-size: 12px;
    border-radius: 4px;
    margin-bottom: 25px;
    .circle-green {
        width: 10px;
        height: 10px;
        border-radius: 100px;
        background: #36df8d;
        display: inline-block;
        margin-right: 3px;
    }
    .circle-grey {
        width: 10px;
        height: 10px;
        border-radius: 100px;
        background: #342756;
        display: inline-block;
        margin-right: 3px;
    }
    .circle-pink {
        width: 10px;
        height: 10px;
        border-radius: 100px;
        background: #c345c3;
        display: inline-block;
        margin-right: 3px;
    }
    .circle-blue {
        width: 10px;
        height: 10px;
        border-radius: 100px;
        background: #505eca;
        display: inline-block;
        margin-right: 3px;
    }
    .circle-yellow {
        width: 10px;
        height: 10px;
        border-radius: 100px;
        background: #ffcb63;
        display: inline-block;
        margin-right: 3px;
    }
}

.total-stats {
    padding: 6px 10px;
    background: #10003b8a;
    color: #ffffff9e;
    border: 1px solid #37296d;
    font-size: 12px;
    border-radius: 4px;
}

.latest-combination {
    p {
        color: #f038f0;
        font-weight: bold;
        font-size: 35px;
        display: inline-block;
        span {
            background: #1d0e48;
            color: #fff;
            display: inline-block;
            width: 70px;
            height: 70px;
            text-align: center;
            line-height: 63px;
            text-transform: uppercase;
            font-weight: 900;
            margin: 8px 10px;
            border-radius: 100px;
            font-size: 45px;
            border: 4px solid #ff36ff;
            box-shadow: 0px 9px 15px #180943;
            &:before {
                content: '';
                position: absolute;
                background: linear-gradient(
                    180deg,
                    #5b138b24 -1.42%,
                    #985cbd26 55.09%,
                    #661b9124 55.1%,
                    #ffffff00 100%
                );
                margin-left: -20px;
                margin-top: -9px;
                width: 70px;
                height: 70px;
                border-radius: 100px;
            }

            @media (max-width: 768px) {
                zoom: 0.58;
                margin: 8px 7px;
                line-height: 56px;
            }
        }
    }
}

.amount-control {
    font-size: 24px;
    font-weight: 900;
    /* Chrome, Safari, Edge, Opera */
    &::-webkit-outer-spin-button,
    &::-webkit-inner-spin-button {
        -webkit-appearance: none;
        margin: 0;
    }

    /* Firefox */
    &[type='number'] {
        -moz-appearance: textfield;
    }
}

::-moz-selection {
    /* Code for Firefox */
    color: #4edc97;
    background: #070019;
}
/* ... */

